--- a/testMultipleForms/testMultipleForms.vbproj
+++ b/testMultipleForms/testMultipleForms.vbproj
@@ -72,17 +72,17 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="GetData.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="GetData.Designer.vb">
+      <DependentUpon>GetData.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GetAdress.Designer.vb">
-      <DependentUpon>GetAdress.vb</DependentUpon>
+    <Compile Include="DataTrans.Designer.vb">
+      <DependentUpon>DataTrans.vb</DependentUpon>
     </Compile>
-    <Compile Include="GetAdress.vb">
+    <Compile Include="DataTrans.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -102,11 +102,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="GetData.resx">
+      <DependentUpon>GetData.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GetAdress.resx">
-      <DependentUpon>GetAdress.vb</DependentUpon>
+    <EmbeddedResource Include="DataTrans.resx">
+      <DependentUpon>DataTrans.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
